# zesh

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  MISSING_FEATURES.md  README.md  TODO.md  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: advw6sw8mcmsy2675rk0l4an9s6gxi4p-source  l8qfbba0py71ppfh6vmw53kwzpj9ap78-source  lzaaihsvlsb361psrvbcngdpxlnfidp6-source  nrazx7287j5ylc7675882czyblf5yy39-source  p4jl8jrmms6qs1mrw6s2vfsbqhvp89np-source  z12kx21k9wmiwiihdfs17abif5r36a33-source
.github/workflows/: ci.yml  main.yml  release.yml
zellij/: Cargo.toml
zellij_rs/: Cargo.toml
zellij_rs/src/: lib.rs  options.rs
zesh/: Cargo.toml
zesh/src/: clone.rs  connection.rs  fs.rs  lib.rs  main.rs
zesh_git/: Cargo.toml
zesh_git/src/: lib.rs
zox_rs/: Cargo.toml
zox_rs/src/: lib.rs
zoxide/: Cargo.toml
