[package]
name = "zesh"
version = "0.1.0"
edition = "2024"
license = "LICENSE.md"
description = "A zellij session manager with zoxide integration, inspired by tmux sesh."
repository = "https://github.com/roberte777/zesh"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
thiserror = "1.0"
zellij = { path = "../zellij" }
zoxide = { path = "../zoxide" }
