[package]
name = "zesh"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A zellij session manager with zoxide integration, inspired by tmux sesh."
repository = "https://github.com/roberte777/zesh/zesh"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
thiserror = "1.0"
zellij_rs = { path = "../zellij_rs", version = "0.1.0"}
zox_rs = { path = "../zox_rs", version = "0.1.0"}
